fix: issue with overlapping bottom fixed parts on product detail page

--- a/src/scss/UI/service-footer.scss
+++ b/src/scss/UI/service-footer.scss
@@ -1,3 +1,7 @@
+body:has( .fixed-footer--visible) .service-footer {
+  display: none;
+}
+
 .service-footer {
   position: fixed;
   right: 0;
